@@ -23,7 +23,8 @@ Mon Jul 10 09:15:25 EDT 2006 / Charles Lepple <clepple@gmail.com>
 Mon Jul 10 07:00:56 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>
 
  - powercom.c: rename shutdown() to nut_shutdown() to avoid naming
-   conflict on LynxOS
+   conflict on LynxOS,
+ - proto.h: add some guards and missing prototypes for LynxOS.
 
    (Olli Savia) [Alioth Bug #303257]
 
